--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -205,12 +205,12 @@ jobs:
 
 
   send_message:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     needs: deploy
     steps:
     - name: Send message
       uses: appleboy/telegram-action@master
       with:
-        to: ${{ secrets.TELEGRAM_ME }}
-        token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        message: Deploy done!
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: Деплой успешно выполнен!
